--- a/html/task-01.html
+++ b/html/task-01.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <p><a href="index.html">На главную</a></p>
+    <p><a href="/index.html">На главную</a></p>
 
     <ul id="categories">
       <li class="item">
@@ -52,6 +52,6 @@
       </li>
     </ul>
 
-    <script src="js/task-01.js" type="module"></script>
+    <script src="/js/task-01.js" type="module"></script>
   </body>
 </html>
