--- a/html/task-04.html
+++ b/html/task-04.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <p><a href="index.html">На главную</a></p>
+    <p><a href="/index.html">На главную</a></p>
 
     <div id="counter">
       <button type="button" data-action="decrement">-1</button>
@@ -25,6 +25,6 @@
       <button type="button" data-action="increment">+1</button>
     </div>
 
-    <script src="js/task-04.js" type="module"></script>
+    <script src="/js/task-04.js" type="module"></script>
   </body>
 </html>
