--- a/html/task-06.html
+++ b/html/task-06.html
@@ -29,7 +29,7 @@
   </head>
 
   <body>
-    <p><a href="index.html">На главную</a></p>
+    <p><a href="/index.html">На главную</a></p>
 
     <input
       type="text"
@@ -38,6 +38,6 @@
       placeholder="Введи 6 символов"
     />
 
-    <script src="js/task-06.js" type="module"></script>
+    <script src="/js/task-06.js" type="module"></script>
   </body>
 </html>
